ScreenImageRect now interprets relative path correctly
(instead of completing the absolute path with a fixed example folder)